--- a/Cascara_Final/examen_baldino.cbp
+++ b/Cascara_Final/examen_baldino.cbp
@@ -62,6 +62,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="persona.h" />
+		<Unit filename="producto.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="producto.h" />
 		<Unit filename="validaciones.c">
 			<Option compilerVar="CC" />
 		</Unit>
